change in inject syntax

--- a/spec/fixtures/index-vue.html
+++ b/spec/fixtures/index-vue.html
@@ -1,9 +1,12 @@
 <html lang="en">
 <head>
 <!-- inject css -->
+    <!-- end inject -->
 </head>
 <body>
 <div id="app"></div>
 <!-- inject js -->
+
+<!-- end inject -->
 </body>
 </html>
